--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
 .App {
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 30px 15px;
+  border: 2px solid black;
+  background-color: whitesmoke;
+  min-height: 900px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
   text-align: center;
-}
-
-a {
-  text-decoration: none;
-  box-shadow: inset 0 0 0 0 #97b0b9;
-  color: #1b1e1f;
-  margin: 0 -0.25rem;
-  padding: 0 0.25rem;
-  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-}
-a:hover {
-  box-shadow: inset 100px 0 0 0 #97b0b9;
-  color: white;
 }
