--- a/src/components/result-item/result-item.module.css
+++ b/src/components/result-item/result-item.module.css
@@ -2,12 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
+  margin: 0 5px;
   margin-top: 20px;
-  padding-right: 5px;
-  padding-left: 5px;
-  width: 560px;
-  height: 60px;
+  padding: 0 5px;
+  width: 100%;
+  height: 70px;
   border-style: solid;
   border-width: 1px;
   background-color: #f9f9f9;
@@ -18,7 +17,20 @@
 }
 
 .resultItem_avatar {
-  width: 55px;
-  height: 55px;
+  width: 60px;
+  height: 60px;
   border-radius: 10px;
+}
+
+.resultItem p {
+  font-size: 18px;
+}
+
+.resultItem a {
+  text-decoration: none;
+  color: black;
+}
+
+.resultItem a:hover {
+  text-decoration: underline;
 }
